# pygapi

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: release.yaml
docs/: advanced.rst  conf.py  index.rst  oauth2.rst  user-guide.rst
docs/api/: auth.rst  client.rst  exceptions.rst  top-level.rst  utils.rst
docs/api/models/: cell.rst  index.rst  spreadsheet.rst  worksheet.rst
pygapi/: __init__.py  auth.py  cell.py  client.py  exceptions.py  spreadsheet.py  urls.py  utils.py  worksheet.py
tests/: cell_test.py  client_test.py  conftest.py  spreadsheet_test.py  utils_test.py  worksheet_test.py
