[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pygapi"
authors = [
    { name = "Paul Philion", email = "philion@seattlecommunitynetworks.org" },
    { name = "Anton philionev", email = "fuss.here@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["google-auth>=1.12.0", "google-auth-oauthlib>=0.4.1"]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://pygapi.readthedocs.io/en/latest/"
Source = "https://github.com/philion/pygapi"

[project.license]
file = "LICENSE.txt"

[tool.flit.sdist]
include = ["docs/", "HISTORY.rst"]
